--- a/envio.html
+++ b/envio.html
@@ -20,16 +20,16 @@
             <img id="logo" src="imagens/pag de cap celular.png" />
 
         <div id="cabecalho">
-            <h2 id="titulo-enviado">EBOOK ENVIADO</h2>
-            <p>DEVIDO AO <span class="laranjo">GRANDE NÚMERO</span> DE <span class="laranjo">PESSOAS PEDINDO</span>,<br>PODE <span class="laranjo">DEMORAR</span> UM <span class="laranjo">POUQUINHO</span> PARA <span class="laranjo">CHEGAR</span>.</p>
+            <h2 id="titulo-enviado">QUAAASE LÁ!</h2>
+            <p>ASSISTA AO <span class="laranjo">VÍDEO ABAIXO</span> PARA GARANTIR QUE <span class="laranjo">SEU EBOOK</span><br>SEJA RECEBIDO COM <span class="laranjo">SUCESSO.</p>
             
         </div>
 
-        <div style="width: 18%; height: 20px; border-bottom: 1px solid white; text-align: center"></div>
+        <div id="barra-div"></div>
 
         <div id="titulo-video">
-            <h1><span class="laranjo">3 DICAS</span> PARA <br>NÃO <span id="titulo-enviado">SENTIR FOME</span></h1>
-            <img src="imagens/seta.png" alt="Separador">
+            <h1><span class="laranjo">PASSO A PASSO</span> PARA <br>GARATIR SEU <span id="titulo-enviado">EBOOK</span></h1>
+            <img id="seta-envio" src="imagens/seta.png" alt="Separador">
         </div>
 
         <iframe src="https://www.youtube.com/embed/yfGEq0JWxGM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
